--- a/auth-service/auth-service/src/main/resources/application.properties
+++ b/auth-service/auth-service/src/main/resources/application.properties
@@ -1,3 +1,13 @@
 spring.application.name=auth-service
 server.port=8785
+
+spring.datasource.url=jdbc:sqlserver://35.193.196.12:1433;databaseName=authdb;encrypt=true;trustServerCertificate=true;
+spring.datasource.username=sqlserver
+spring.datasource.password=N3wsAuth!2024
+spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
+
 eureka.client.enabled=false
